--- a/index-2.html
+++ b/index-2.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/fonts/baar-sophia/stylesheet.css" />
     <link rel="stylesheet" href="assets/fonts/fontawesome/all.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
-    <title>Woocomse</title>
+    <title>Steve Bristow</title>
   </head>
   <body>
     <main>
